Now includes Boa dependency
In addition there is a slight change to the Learning Agent so that it no longer functions

--- a/ANL-2021-example-agent-master/pom.xml
+++ b/ANL-2021-example-agent-master/pom.xml
@@ -47,6 +47,11 @@
 			<version>${geniusweb.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>geniusweb</groupId>
+			<artifactId>boa</artifactId>
+			<version>${geniusweb.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>tudelft.utilities</groupId>
 			<artifactId>logging</artifactId>
 			<version>1.0.1</version>
